# kitty-lang

./: CMakeLists.txt  readme.md  tail.kitty  test.kitty  variable.kitty
asm/: out  out.asm
src/: main.cpp
src/headers/: asmconv.hpp  genration.hpp  parser.hpp  tokenization.hpp
